--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ exceptiongroup==1.1.2
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
+mariadb==1.1.7
 mysql-connector==2.2.9
 outcome==1.2.0
 packaging==23.1
@@ -22,5 +23,6 @@ SQLAlchemy==2.0.19
 trio==0.22.2
 trio-websocket==0.10.3
 typing_extensions==4.7.1
+Unidecode==1.3.6
 urllib3==2.0.4
 wsproto==1.2.0
